{
    "name": "Controls",
    "maps": [
        {
            "name": "Mouse",
            "id": "7a29242e-74db-49bf-967f-ccf81ffc90a5",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "4a2a198d-5622-41f6-9e97-47c23bcba732",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "73f1cf55-6044-41b5-bc1e-eb50a9477fc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CursorPosition",
                    "type": "PassThrough",
                    "id": "5f5cd69d-4a1a-4e1d-a514-cecfe1ad56f6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "e2a087bf-c2d7-4ccb-91c1-1597ce5ce8e9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Yaw",
                    "type": "PassThrough",
                    "id": "a435e4a9-0360-41b4-9b63-20079546dce2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "d8ddd220-3801-4b2b-9a8a-9cd6266150d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "361ca933-2ef3-4613-8f05-633ff8f7b58d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07b4abf8-cffb-49c4-a9ff-49315057255f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d305759b-90ea-40b9-954b-0bd873d77ca7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa7f1083-f6c1-4eb3-b2bb-b615f2f56509",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23f7595c-6268-400f-8d41-161b7cf81780",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80ac8b12-96f3-4c66-b250-1068ce560f23",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "5e1de1ce-9dcd-4a78-8c14-e5aae4c069f3",
            "actions": [
                {
                    "name": "InventoryToggle",
                    "type": "Button",
                    "id": "4d9e24f3-e098-4454-9f24-0ebde313672c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5caf911-822a-46fd-824c-12c76f7bf5c4",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}